<resources>
    <string name="app_name">NewsApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="time">时间</string>
    <string name="category">类别</string>

    <string name="ok">OK</string>
    <string name="cancel">取消</string>
    <string name="搜索类型">搜索类型</string>
    <string name="一天内">一天内</string>
    <string name="一周内">一周内</string>
    <string name="一月内">一月内</string>
    <string name="一年内">一年内</string>
    <string name="自定义">自定义</string>
    <string name="从">从</string>
    <string name="开始时间">开始时间</string>
    <string name="至">至</string>
    <string name="结束时间">结束时间</string>
    <string name="time_dialog_message">时间</string>
    <string name="action_favorite">收藏</string>
    <string name="action_history">历史</string>
    <string name="action_set_categories">选择新闻种类</string>
</resources>